Bug 159368 - Can't open BASIC editor from Start Center; next action crashes LO (gtk3)
Summary: Can't open BASIC editor from Start Center; next action crashes LO (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.1 target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Start-Center GTK3 Crash
  Show dependency treegraph
 
Reported: 2024-01-25 02:08 UTC by Stéphane Guillou (stragu)
Modified: 2024-01-28 02:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
crash dump (334.09 KB, application/vnd.tcpdump.pcap)
2024-01-25 02:08 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2024-01-25 02:08:48 UTC
Created attachment 192156 [details]
crash dump

Steps:
1. Open Start Center
2. Tools > Macros > Edit Macros...

Result: IDE does not open. From there, if you try again to open it, an empty window opens. If you instead try to open e.g. Writer, LO crashes.

Not reproduced if IDE is opened from e.g. Writer instead of the Start Center.
Not reproduced with gen VCL plugin.

In console:

warn:legacy.osl:242956:242956:framework/source/uielement/toolbarmanager.cxx:149: OSL_ASSERT: !m_bAddedToTaskPaneList
warn:unotools.misc:242956:242956:unotools/source/misc/mediadescriptor.cxx:372: url: 'private:factory/swriter' com.sun.star.ucb.ContentCreationException message: "No Content Provider available for URL: private:factory/swriter at /home/tdf/lode/jenkins/workspace/lo_gerrit/tb/src_master/ucbhelper/source/client/content.cxx:208" eError: (com.sun.star.ucb.ContentCreationError) NO_CONTENT_PROVIDER

In RTL UI, trying to open the IDE the second time crashes directly, with in console:

warn:legacy.osl:243885:243885:framework/source/uielement/toolbarmanager.cxx:149: OSL_ASSERT: !m_bAddedToTaskPaneList

Bibisected with linux-64-24.8 repo to first bad build [e8c5f7481a4a0bf063a2df2d34c37bf558f369e0] which points to:

commit 076e21f4e3c47f8be5218ab683f972eef1de3e18
author	Rafael Lima 	Wed Aug 23 15:23:25 2023 +0200
committer	Rafael Lima 	Mon Jan 08 19:13:38 2024 +0100
tdf#156925 Add Color Scheme selector to the Basic IDE
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155928

Rafael, can you please have a look?
Comment 1 Caolán McNamara 2024-01-25 08:47:39 UTC
https://gerrit.libreoffice.org/c/core/+/162557 solves this
Comment 2 Commit Notification 2024-01-25 10:23:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/be464eaa4e443e81ee236044b37cd8a861fa4d17

Resolves: tdf#159368 crash on tools, macros, edit

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-01-25 11:10:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b6f04ea7033c5ca529363a4027cf2cb7d2c7ee3

Resolves: tdf#159368 crash on tools, macros, edit

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Rafael Lima 2024-01-25 11:42:20 UTC
I've just seen this report. Thanks Caolan for the quick fix.
Comment 5 Stéphane Guillou (stragu) 2024-01-28 02:22:27 UTC
Thanks for the quick response, Caolán! Verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2cedb1a19ad605df4e148589e9027512e4dd9265
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Just curious: why the cherrypick to 24.2? I couldn't crash it in that branch.