Resolves: tdf#159368 crash on tools, macros, edit

when launched from startcenter

Change-Id: I362bfe27914445c3027b6e8a125a75cc31679678
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162557
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>